--- a/WebRifa.Blazor.Core/WebRifa.Blazor.Core.csproj
+++ b/WebRifa.Blazor.Core/WebRifa.Blazor.Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Infrastructure\**" />
+    <EmbeddedResource Remove="Infrastructure\**" />
+    <None Remove="Infrastructure\**" />
+  </ItemGroup>
+
 </Project>
