Working on controllers and services.

--- a/WebRifa.Blazor/WebRifa.Blazor/appsettings.json
+++ b/WebRifa.Blazor/WebRifa.Blazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebRifa.Blazor-bc241381-0c2a-41ef-a1a4-ffdb6b059988;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=WebRifaBlazor;User Id=postgres;Password=Rest@p270620;"
   },
   "Logging": {
     "LogLevel": {
