--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,14 +1,17 @@
 {
 	"version": "2.0.0",
-	"tasks": [
+	"tasks": [		
 		{
-			"type": "msbuild",
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"group": "build",
-			"label": "build",
-			"detail": "Build the WebRifa.Blazor.csproj project using dotnet build"
-		}
+            "label": "build",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "build",
+                // "${workspaceFolder}/WebRifa.Blazor/WebRifa.Blazor/bin/Debug/net8.0/WebRifa.Blazor.dll",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
 	]
 }
