--- a/WebRifa.Blazor/WebRifa.Blazor/WebRifa.Blazor.csproj
+++ b/WebRifa.Blazor/WebRifa.Blazor/WebRifa.Blazor.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
+    <PackageReference Include="Net.Codecrete.QrCodeGenerator" Version="2.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
