--- a/WebRifa.Blazor/WebRifa.Blazor/WebRifa.Blazor.csproj
+++ b/WebRifa.Blazor/WebRifa.Blazor/WebRifa.Blazor.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="appsettings.Development.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="appsettings.Development.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\WebRifa.Blazor.Core\WebRifa.Blazor.Core.csproj" />
     <ProjectReference Include="..\WebRifa.Blazor.Client\WebRifa.Blazor.Client.csproj" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
